# UACS-services

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  mail.py  main.py
app/models/Locker/: __init__.py  methods.py
app/models/Order/: __init__.py  methods.py
app/models/User/: __init__.py
app/routers/: __init__.py
app/routers/general/: general_router.py
app/routers/lockers/: lockers_router.py
app/routers/orders/: orders_router.py
app/utils/: auth.py  db.py  logger.py  utils.py
